Fix audit log filter bar horizontal spacing

--- a/portal/src/components/audit-log/AuditLogFilterBar.module.css
+++ b/portal/src/components/audit-log/AuditLogFilterBar.module.css
@@ -14,7 +14,7 @@
 }
 
 .filterContainer {
-  @apply flex items-center;
+  @apply flex items-center gap-x-4;
   @apply h-full;
 
   @apply tablet:grid tablet:grid-cols-2 tablet:gap-4;
@@ -23,7 +23,6 @@
 
 .searchBox {
   @apply w-[300px] flex-1-0-auto;
-  @apply mx-4;
 
   @apply tablet:w-full;
   @apply tablet:col-span-2;
@@ -40,6 +39,7 @@
 }
 
 .filterActionContainer {
+  @apply ml-4 tablet:ml-0;
   @apply h-full;
   @apply flex items-center;
   @apply flex-1-0-auto;
